--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 main{
     border: 2px solid bisque;
     border-radius: 5px;
@@ -32,6 +33,9 @@ label{
 }
 label, input{
     margin: 5px;
+}
+input:hover{
+    background-color: rgb(252, 189, 112);
 }
 
 button{
